// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders with a stop selected 1`] = `
<div
  className="m-tnm-sidebar__header"
>
  <div
    className="m-tnm-sidebar__header-title"
  >
    <h2>
      Nearby Routes
    </h2>
    <div
      className="m-tnm-sidebar__view-change"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      Change view
    </div>
  </div>
  <span
    aria-label="Remove filtering by Stuart St @ Charles St S"
    className="m-tnm-sidebar__pill"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    Stuart St @ Charles St S
    <span
      className="m-tnm-sidebar__pill-close fa fa-times-circle"
    />
  </span>
</div>
`;

exports[`it renders with no stop selected 1`] = `
<div
  className="m-tnm-sidebar__header"
>
  <div
    className="m-tnm-sidebar__header-title"
  >
    <h2>
      Nearby Routes
    </h2>
    <div
      className="m-tnm-sidebar__view-change"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      Change view
    </div>
  </div>
</div>
`;
